<resources>
    <string name="app_name">OurSpace</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up_button">Sign Up and Log In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed in</string>
    <string name="slogan">Just You and Me</string>
    <string name="welcome">OurSpace</string>
    <string name="prompt">Sign in to continue</string>
    <string name="forget">Forget Password?</string>
    <string name="new_user">New User?</string>
    <string name="google_sign">Sign in with Google</string>
    <string name="sign_up">SignUp to enter OurSpace</string>
    <string name="have_an_acc">Already have an account? LogIn</string>
    <string name="forget_password">Send a recovery email to reset password.</string>
    <string name="send">Send</string>
    <string name="back">Back to Login</string>
    <string name="crete_space">Create Space</string>
    <string name="verify">Verify your email to continue!</string>
    <string name="verify_button">Send Email Verification</string>
    <string name="verified">Verified? Log in!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="logo_text_size">70dp</string>

    <plurals name ="days">
        <item quantity="zero">%d Days</item>
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">%d Hours</item>
        <item quantity="one">%d Hour</item>
        <item quantity="other">%d Hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%d Minutes</item>
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="zero">%d Seconds</item>
        <item quantity="one">%d Second</item>
        <item quantity="other">%d Seconds</item>
    </plurals>

</resources>