<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyEmail"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="74sp"
        android:textColor="#000"
        android:transitionName="logo_text"/>

    <TextView
        android:id="@+id/verify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textSize="18sp"
        android:transitionName="slogan_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/send_verification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:text="@string/verify_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="sign_in_tran"/>

        <Button
            android:id="@+id/verified_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/verified"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:transitionName="sign_up_tran"/>
    </LinearLayout>

</LinearLayout>