<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="74sp"
        android:textColor="#000"
        android:transitionName="logo_text"/>

    <TextView
        android:id="@+id/continue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:textSize="18sp"
        android:transitionName="slogan_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="Email"
            android:transitionName="email_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forget"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:text="@string/sign_in"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="sign_in_tran"/>
        <Button
            android:id="@+id/google_sign_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4081EC"
            android:textColor="#fff"
            android:text="@string/google_sign"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/new_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/new_user"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:transitionName="sign_up_tran"/>
    </LinearLayout>

</LinearLayout>