<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="74sp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:transitionName="logo_text"/>

    <TextView
        android:id="@+id/forget_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="18sp"
        android:transitionName="slogan_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="Your Email"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:text="@string/send"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="sign_in_tran"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/back"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="sign_up_tran"/>

    </LinearLayout>



</LinearLayout>