<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="#fff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="70sp"
            android:layout_centerHorizontal="true"
            android:textColor="#000"
            android:transitionName="logo_text"/>
        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_below="@id/welcome_text"
            android:transitionName="slogan_text"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display_name"
            android:layout_marginTop="20dp"
            android:hint="Display Name"
            android:layout_below="@id/sign_up_text"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:transitionName="username_tran"
            android:maxLength ="16"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="Email"
            android:layout_marginTop="5dp"
            android:layout_below="@id/display_name"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            android:layout_below="@id/email"
            app:counterMaxLength="16"
            android:transitionName="password_tran"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:maxLength ="16"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:hint="Confirm"
            android:layout_below="@id/password"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:maxLength ="16"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm"
            android:background="#000"
            android:textColor="#fff"
            android:text="@string/sign_up_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="sign_in_tran"/>

        <Button
            android:id="@+id/have_an_acc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/have_an_acc"
            android:layout_below="@id/sign_up_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="sign_up_tran"/>
    </RelativeLayout>



</LinearLayout>